feat: topics and indonesian politician quotes (#5)
