# packages/server/internal/models/models.go
@@ -57,6 +57,7 @@ type SessionEntity struct {
 	CreatedAt time.Time
 	UpdatedAt time.Time
 	EndsAt    time.Time
+	Topic     string
 	Mode      string
 	// Available phases: idle, playing, finished.
 	Phase                    string
@@ -67,7 +68,6 @@ type SessionEntity struct {
 	CorrectAttemptTimestamps JSON `gorm:"type:jsonb"`
 	AutoVoice                bool
 	UsedWords                pq.StringArray `gorm:"type:text"`
-	WordDefinitions          pq.StringArray `gorm:"type:text"`
 	CurrentWord              string
 	CurrentScrambledWord     string
 	CurrentWordDefinition    string
